kubernetes-examples/nodejs-on-kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: node-app
    spec:
      containers:
      - name: node-app
        image: ketanstechracers/node-dockerized:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: "node-app-regcred"
